forced dropdown menu visible in element container (req by unibe)

--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -517,6 +517,9 @@ ul.zmi-container .right div input {
 ul.zmi-container .zmi-item .zmi-action {
 	margin-left:-159px;
 }
+ul.zmi-container .zmi-item.zmi-nochildren .zmi-action {
+	margin-left:0;
+}
 ul.zmi-container .zmi-item .zmi-action .split-left {
 	width:160px;
 	visibility:hidden;
