--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -546,14 +546,19 @@ ul.zmi-container.pages .zmi-item .contentEditable {
 	padding-left:1.0em !important;
 	font-size:large;
 }
-form.form-horizontal {
+.zmi form.form-horizontal {
 	background-color:#fff;
-	margin-left:2em;
-	margin-right:2em;
+	margin-left:1.5em;
+	margin-right:1.5em;
 	padding:0.5em
 }
-form.form-horizontal.form-insert {
+.zmi form.form-horizontal.form-insert {
 	margin:0;
+}
+.zmi legend {
+	margin-bottom: .35em;
+	border-bottom: none;
+	color:#888;
 }
 .system table.zopeobjects i {
 	margin-left:3px;
@@ -1294,8 +1299,6 @@ div.right .btn .caret {
 		-webkit-transform: translate(3%, 2em) !important;
 		transform: translate(3%, 2em) !important;
 	}
-}
-	
 }
 
 @media (min-width: 767px) {
