--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -222,6 +222,7 @@ div.grippy {
 	font-size: 14px;
 	overflow: hidden;
 	position: absolute;
+	left:0;
 }
 .zmi-item.ui-sortable-helper {
 	box-shadow:2px 5px 8px #ccc;
