added CSS classes ZMSSQLDB GUI types (req by OT)

--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -986,7 +986,10 @@ input.btn.btn-file {
 	margin:0;
 	height:20px;
 }
-
+ZMSSqlDbForm-multimultiselect {
+	position: absolute;
+	right: 34px;
+}
 .table.zmi-selectable tr th,
 .ZMSRecordSet .table tr td {
 	padding:4px;
