added css class nowrap for data grid sorter (req by ot)

--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -951,7 +951,9 @@ input.btn.btn-file {
  * +- [ZMI] ZMSSQLDB / ZMSRecordset
  * +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
  */
-
+.nowrap {
+	white-space:nowrap;
+}
 .pagination {
 	white-space:nowrap;
 }
