foxed #2986 (hide zmi-logo per default) (2)

--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -71,6 +71,7 @@ textarea.zmi-helper-hidden, textarea.ui-helper-hidden {
 }
 .zmi header .navbar-brand .slogan {
 	font-size:x-small;
+	margin-left:15px;
 }
 @media (max-width: 992px) {
 	.zmi header .navbar-brand .slogan {
