fixed font size zmi client list (req by unibe)

--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -305,6 +305,8 @@ ul.portalClients.zmi-container .zmi-item .portalClient div.ZMS {
 }
 ul.portalClients.zmi-container .zmi-item .portalClient div.ZMS h1 {
 	padding-top:.35em;
+	font-size: large;
+	margin-top: 0;
 }
 table.table tbody tr td.data {
 	white-space:nowrap;
